# dlfelis

./: .gitignore  LICENSE  LICENSE.md  README.md  setup.cfg
.github/workflows/: CI.yml
dlfelis/: __init__.py  tap_schema.py
dlfelis/aj_test/: gnirs_dqs.yaml  hipparcos2.json  hipparcos2.yaml  sparcl.json  sparcl.yaml  sparcl2.json  sparcl2.yaml  splus_dr4.json  splus_dr4.yaml  testschema.json  testschema.yaml
dlfelis/cfg.db01/: allwise.json  allwise.yaml  bulge_dr1.json  bulge_dr1.yaml  buzzard_dr1.json  buzzard_dr1.yaml  catwise2020.json  catwise2020.yaml  dad_dr1.json  dad_dr1.yaml  dad_dr2.json  dad_dr2.yaml  decaps_dr1.json  decaps_dr1.yaml  decaps_dr2.json  decaps_dr2.yaml  delve_dr1.json  delve_dr1.yaml  delve_dr2.json  delve_dr2.yaml  des_dr1.json  des_dr1.yaml  des_dr2.json  des_dr2.yaml  des_sva1.json  des_sva1.yaml  desi_dr1.json  desi_dr1.yaml  desi_edr.json  desi_edr.yaml  dltest.json  dltest.yaml  gaia_dr1.json  gaia_dr1.yaml  gaia_dr2.json  gaia_dr2.yaml  gaia_dr3.json  gaia_dr3.yaml  gaia_edr3.json  gaia_edr3.yaml  (+120 more)
dlfelis/dh_test/: decaps_dr2_meas.json  decaps_dr2_meas.yaml
dlfelis/test/: __init__.py  test_tap_schema.py  test_top_level.py
docs/: api.rst  changes.rst  conf.py  index.rst
